# netcdf2vtu

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CONTRIBUTING.md  README.md  import_netcdf_as_vtkstrucgrid.ipynb  import_netcdf_as_vtp_map_on_vtu.ipynb  map_mHM_on_ElbeDomain.py  map_mhm_netcdf_on_vtu.py  mhm2ogs_selke.py  pyproject.toml  requirements.txt  trial5_srcdat.py  trial6_intpol.py  trial7_intpol.py
data/: ex1_3.nc  ex2_4.nc  ogs.vtu
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
examples/: ex1.py  ex2.py  ex3.py  ex4.py
netcdf2vtk/: mapping.py  netcdf2vtk.py
scripts/: create_data.py  import_netcdf_as_vtp_map_on_vtu.ipynb  map_mhm_netcdf_on_vtu.py  map_nasa_precip_on_vtu.ipynb  mhm2ogs_elbe.py  mhm2ogs_selke.py  trial1_io.py  trial3_io.py  trial4_srcdat.py
src/netcdf2vtk/: mapper.py  netcdf2vtk.py
src/netcdf2vtu/: netcdf2vtu.py
tests/: ref.vtp  ref.vtu  test_netcdf2ctk.py  test_netcdf2vtu.py
