[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netcdf2vtu"
version = "0.0.1"
authors = [
  { name="Johannes Boog", email="johannesboog@yahoo.de"},
]
description = "Mapping data from netCDF files on VTU."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "netCDF4>=1.5.7",
    "numpy>=1.22.3",
    "pyproj>=3.4.1",
    "vtk>=9.0.3"
]

[project.urls]
"Homepage" = "https://gitlab.com/ufz_digital_earth/netcdf2vtu"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.scripts]
netcdf2vtu = "netcdf2vtu.cli:main"